fix(collections/footer): remove padding from footer on mobile and remove filters from displaying

--- a/src/styles/modules/collections.scss
+++ b/src/styles/modules/collections.scss
@@ -22,10 +22,14 @@
 }
 
 .collection__filters {
+    display: none;
     margin: $base-spacing-unit-extra-large 0 0 0;
     list-style: none;
     padding: 0;
     font-size: 14px;
+    @include breakpoint(medium) {
+        display: block;
+    }
     li {
         border-bottom: 1px solid $frenchGray;
         max-width: 75%;
